--- a/web1/src/app/admin/add-type/add-type.component.html
+++ b/web1/src/app/admin/add-type/add-type.component.html
@@ -46,7 +46,7 @@
                                         </mat-error> -->
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="!showAdd" class="col-xl-1 col-lg-1 col-md-1 col-2 mb-0">
+                                <div *ngIf="!showAdd" class="col-xl-1 col-lg-1 col-md-1 col-2 mb-0 d-flex">
                                     <button mat-mini-fab color="primary" (click)="showAdd = !showAdd"
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>add</mat-icon>
