--- a/web1/src/app/inventory/recycle-bin/recycle-bin.component.html
+++ b/web1/src/app/inventory/recycle-bin/recycle-bin.component.html
@@ -69,7 +69,7 @@
                         </form>
                         <!-- form end -->
 
-                        <div class="body mt-md-1 pt-3 mt-5 p-2">
+                        <div class="body mt-1">
                             <div class="row table-responsive">
                                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                                     <div class="table-responsive">
@@ -89,7 +89,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                   
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.CustomerID}} </td>
                                                     <td>{{data.CustomerName}} </td>
@@ -115,7 +115,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                    
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.CustomerID}} </td>
                                                     <td>{{data.CustomerName}} </td>
@@ -145,7 +145,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                   
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.CustomerID}} </td>
                                                     <td>{{data.CustomerName}} </td>
@@ -175,7 +175,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                    
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.SupplierID}} </td>
                                                     <td>{{data.SupplierName}} </td>
@@ -201,7 +201,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.SupplierID}} </td>
                                                     <td>{{data.SupplierName}} </td>
@@ -233,7 +233,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                  
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.SupplierID}} </td>
                                                     <td>{{data.SupplierName}} </td>
@@ -265,7 +265,7 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td> </td>
+                                                   
                                                     <td>{{1+i}} </td>
                                                     <td>{{data.ExpenseDate}} </td>
                                                     <td>{{data.Name}} </td>
