--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <!-- save product spec start -->
-                            <div class="row">
+                            <div class="row ">
                                 <div class="col-xl-2 col-lg-2 col-md-4 col-sm-12 mb-0"
                                     *ngFor="let spec of specList ; let i = index;">
                                     <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
@@ -125,7 +125,7 @@
                         <!-- form end -->
                         <!-- list start -->
                         <form>
-                            <div class="row">
+                            <div class="row mt-3">
                                 <div class="col-12" style="overflow-y: auto; height: 400px;">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
