--- a/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
+++ b/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
@@ -243,7 +243,7 @@
                             </div>
 
                              <div class="row">
-                                <div class="col-1">
+                                <div class="col-md-1 col-6">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
                                         <input matInput name="Quantityt" [(ngModel)]="xferMaster.Quantity"
