--- a/web1/src/app/product/add-manage/add-manage.component.html
+++ b/web1/src/app/product/add-manage/add-manage.component.html
@@ -47,7 +47,7 @@
                                         </mat-error> -->
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="!showAdd" class=" col-lg-6 col-md-6 col-4 mb-0">
+                                <div *ngIf="!showAdd" class=" col-lg-6 col-md-6 col-4 mb-0 d-flex">
                                    <button *ngIf="addAddManagement" type="button" autofocus class="btn_icon" (click)="showAdd = !showAdd;">
                                     <mat-icon class="col-white plus_icon" >add</mat-icon>
                                    </button>
