--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -6,11 +6,11 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-lg-1 col-md-2 col-6 p-0 ms-3">
+                                <div class="col-lg-1 col-md-2 col-5 p-0 ms-3">
                                     <h2>Shop List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
                                             type="button" (click)="exportAsXLSX()"></i> </h2>
                                 </div>
-                                <div class="col-md-2 col-3 ps-md-0 ps-1 order-1 order-md-1">
+                                <div class="col-md-2 col-4 ps-md-0 ps-1 order-1 order-md-1">
                                     <select class="form-control" id="itemsPerPage"   name="itemsPerPage"  
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -22,26 +22,33 @@
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
                                 </div>
-                                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                <div class="col-md-3  d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                         [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                         [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
-                                <div class="col-md-1 col-5 ms-auto order-0 order-md-1">
+                                <div class="col-8 mt-1 d-md-none d-block mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                                        [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                </div>
+                                <div class="col-md-1 col-6 ms-auto order-0 order-md-1">
                                     <button type="button" mat-raised-button color="primary"  data-mdb-toggle="modal"
                                     data-mdb-target="#exampleModal" (click)="openModal2(content2)" >
                                          Customer Category
                                     </button>
                                 </div>
-                                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
+                                <div class="col-md-2 col-8 ms-auto order-0 order-md-1">
                                     <div class="input-group">
                                         <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
                                             id="form1" class="form-control" />
                                     </div>
                                 </div>
-                                <div class="col-md-1 col-6 order-3 order-md-1 ms-3 ms-md-0"
+                                <div class="col-md-1 col-4 order-3 order-md-1 ms-3 ms-md-0"
                                     style="width: 70px;padding: 0;">
                                     <button class="bg-none" (click)="openModal(content)" *ngIf="addShopList === true">
                                         <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
@@ -84,7 +91,7 @@
                         <!-- Grid View end -->
                         <!-- shop list start -->
                         <div class="body mt-md-1 mt-5 p-2">
-                            <div class="row" *ngIf="gridview">
+                            <div class="row mt-md-1 mt-5" *ngIf="gridview">
                                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                                     <div class="table-responsive">
                                         <table class="table table-striped table-hover table-sm table-bordered"
