--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -25,11 +25,18 @@
                                     <option [ngValue]="500">Show 500 Row</option>
                                 </select>
                             </div>
-                            <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                            <div class="col-md-3 d-md-block d-none mx-md-auto" style="margin-top:0px;">
                                 <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                     ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                     [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                     [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                </ngb-pagination>
+                            </div>
+                            <div class="d-md-none d-block col-6 mx-md-auto" style="margin-top:0px;">
+                                <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                    ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                                    [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                                    [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                 </ngb-pagination>
                             </div>
                             <div class="col-md-2 col-4 ms-auto">
