--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -26,20 +26,27 @@
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
                                 </div>
-                                <div class="col-lg-3 col-md-3 col-4 mx-md-auto " style="margin-top:0px;">
+                                <div class="col-lg-3 col-md-3 d-md-block d-none mx-md-auto " style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                         [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                         [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
-                                <div class="col-lg-2 col-md-2 col-4 ms-auto">
+                                <div class="d-md-none d-block col-5 mx-md-auto " style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                                        [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-5 ms-auto">
                                     <div class="input-group">
                                         <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
                                             id="form1" class="form-control" />
                                     </div>
                                 </div>
-                                <div class="col-lg-1 col-md-1 col-1" style="width: 40px;padding: 0;">
+                                <div class="col-lg-1 col-md-1 col-2" style="width: 40px;padding: 0;">
                                     <button class="bg-none" [routerLink]="['/inventory/pre-order',0]">
                                         <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                                     </button>
@@ -169,7 +176,7 @@
                             </form>
                             <!-- form end -->
                         </div>
-                        <div class="body mt-md-0 mt-5 p-2">
+                        <div class="body mt-md-0 mt-3 p-2">
                             <div class="row ">
                                 <div class="col-12 " style="overflow: auto; height: 460px;">
                                         <table class="table  table-striped table-hover table-sm table-bordered"
