--- a/web1/src/app/inventory/physical-list/physical-list.component.html
+++ b/web1/src/app/inventory/physical-list/physical-list.component.html
@@ -7,10 +7,10 @@
               <div class="header p-2 py-0 pt-1">
                 <!-- Purchase all Supplier Wise-->
                 <div  class="row mb-5">
-                  <div class="col-xl-1 col-lg-2 col-md-2 col-5 p-0 ms-3">
+                  <div class="col-xl-1 col-lg-2 col-md-2 col-6 p-0 ps-3">
                     <h2>Physical Stock  </h2>
                   </div>
-                  <div class="col-md-1 col-3 ps-md-0 ps-3 order-1 order-md-1">
+                  <div class="col-md-1 col-4 ps-md-0 ps-3 order-1 order-md-1">
                     <select class=" form-control"
                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                       [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -22,13 +22,19 @@
                       <option [ngValue]="500">Show 500 Row</option>
                     </select>
                   </div>
-                  <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                       [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                       (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                     </ngb-pagination>
                   </div>
-                  <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
+                  <div class="d-md-none d-block col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                      (pageChange)="getList()" [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                    </ngb-pagination>
+                  </div>
+                  <div class="col-md-2 col-6 ms-auto order-0 order-md-1">
                     <div class="input-group">
                       <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                         class="form-control" />
