--- a/web1/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web1/src/app/inventory/product-transfer/product-transfer.component.html
@@ -188,8 +188,8 @@
                             </div>
                             <hr style="margin: 0;">
                             <!-- fillter data list -->
-                            <div class="row pt-2" style="margin: 0;">
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-8  p-0">
+                            <div class="row pt-4" style="margin: 0;">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-7  p-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Shop Filter</mat-label>
                                         <mat-select name="shopID"  (selectionChange)="FilterData(shopID.value)" #shopID>
@@ -200,18 +200,24 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-3 col-md-6 col-4 mb-3 mb-md-0 ">
+                                <div class="col-xl-2 col-lg-3 col-md-6 col-5 mb-3 mb-md-0 ">
                                     <button (click)="PDFtransfer()"  class="me-md-1 me-0 shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
-                                    <button class="whatsapp ms-1 me-1 ms-md-4 me-md-4"><i class="fa-brands fa-whatsapp" ></i></button>
+                                    <button class="whatsapp ms-2 me-2 ms-md-4 me-md-4"><i class="fa-brands fa-whatsapp" ></i></button>
                                     <button class="email"><i class="fa-solid fa-envelope"></i></button>
                                 </div>
-                                <div class="col-xl-3 col-lg-3 col-md-10 col-9 mx-md-auto" style="margin-top:0px;">
+                                <div class="col-xl-3 col-lg-3 col-md-10 d-md-block d-none mx-md-auto" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                                       [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                                       (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 ps-md-0 ps-1">
+                                <div class="d-md-none d-block col-8 mx-md-auto" style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                                      (pageChange)="getList()" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-4 ps-md-0 ps-1">
                                     <select class=" form-control"
                                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                      name="itemsPerPage" [(ngModel)]="itemsPerPage" (change)="getList();">
