--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -22,19 +22,25 @@
                       <option [ngValue]="500">Show 500 Row</option>
                     </select>
                   </div>
-                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                  <div class="col-md-3 d-md-block d-none mx-md-auto" style="margin-top:0px;">
                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                       [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                      [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                     </ngb-pagination>
                   </div>
-                  <div class="col-md-2 col-4 ms-auto">
+                  <div class=" col-5 d-md-none d-block mx-md-auto" style="margin-top:0px;">
+                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                     [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                    </ngb-pagination>
+                  </div>
+                  <div class="col-md-2 col-5 ms-auto">
                     <div class="input-group">
                       <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                         class="form-control" />
                     </div>
                   </div>
-                  <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
+                  <div class="col-md-1 col-2" style="width: 40px;padding: 0;">
                     <button type="button" *ngIf="addPurchaseReturnList" class="bg-none" [routerLink]="['/inventory/purchase-return',0]">
                       <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                     </button>
