--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -6,14 +6,14 @@
                 <div class="card">
                     <div class="header p-0 py-0 pt-1">
                         <div class="row">
-                            <div class="col-lg-1 col-md-2 col-5 p-0 ms-3">
+                            <div class="col-lg-1 col-md-2 col-5 p-0 ms-2">
                                 <h2>Suppliers List </h2>
                             </div>
                             <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
                                 <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                                     (click)="exportAsXLSX()"></i>
                             </div>
-                            <div class="col-md-1 col-3 ps-md-0 ps-1 order-1 order-md-1 ">
+                            <div class="col-md-1 col-4 ps-md-0 ps-1 order-1 order-md-1 ">
                                 <select class=" form-control"
                                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -25,23 +25,30 @@
                                     <option [ngValue]="500">Show 500 Row</option>
                                 </select>
                             </div>
-                            <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                            <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                                 <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                     ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                     [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                     [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                 </ngb-pagination>
                             </div>
+                            <div class=" col-8 mt-1 d-md-none d-block mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                    ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                                    [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                                    [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                </ngb-pagination>
+                            </div>
                             <div class=" col-md-1 col-5 ms-auto order-0 order-md-1">
                                 <button type="button" (click)="openModal1(content1)" class="me-3" mat-raised-button color="primary">Create Credit Note</button>
                             </div>
-                            <div class=" col-md-2 col-5 ms-auto order-0 order-md-1">
+                            <div class=" col-md-2 col-8 ms-auto order-0 order-md-1">
                                 <div class="input-group">
                                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
                                         id="form1" class="form-control" />
                                 </div>
                             </div>
-                            <div class="col-md-1 col-2 order-3 order-md-1 ms-3 ms-md-0 d-flex" style="width: 70px;padding: 0;">
+                            <div class="col-md-1 col-4 order-3 order-md-1 ms-3 ms-md-0 d-flex" style="width: 70px;padding: 0;">
                                 <button *ngIf="addSupplierList" class="bg-none" (click)="openModal(content)">
                                     <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
                                     data-mdb-target="#exampleModal" > add</mat-icon>
@@ -81,7 +88,7 @@
                     <!-- Grid View end -->
                     <!-- table list start -->
                     <div class="row mt-md-3 mt-5  " *ngIf="gridview">
-                        <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive mt-md-0 mt-3">
+                        <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive mt-md-0 mt-5">
                             <table style="width:100%;" id="exportsss"
                                 class="table table-striped table-hover table-sm table-bordered"
                                 style="border: 2px solid #fff !important;">
