--- a/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
+++ b/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
@@ -8,14 +8,14 @@
                 <div class="card">
                     <div class="header">
                         <div  *ngIf="this.id == '0'" class="row">
-                            <div class="col-lg-2 col-md-4 col-8 p-0 ms-2">
+                            <div class="col-lg-2 col-md-4 col-8 p-0 ps-2">
                               <h2>Fitter Invoice List
                                 <button class="bg-none" (click)="exportAsXLSX()">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
                                 </button>
                               </h2>
                             </div>
-                            <div class="col-md-2 col-1 ps-md-0 ps-3">
+                            <div class="col-md-2 col-4 ps-md-0 ps-3">
                               <select class=" form-control"
                                 style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                 [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -30,16 +30,16 @@
                             <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                               <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                                 [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
-                                (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                (pageChange)="getList()" [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                               </ngb-pagination>
                             </div>
-                            <div class="col-md-2 col-4 ms-auto">
+                            <div class="col-md-2 col-6 ms-auto">
                               <div class="input-group">
                                 <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                                   class="form-control" />
                               </div>
                             </div>
-                            <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
+                            <div class="col-md-1 col-2" style="width: 40px;padding: 0;">
                               <button class="bg-none" [routerLink]="['/po/fitterInvoice']">
                                 <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                               </button> 
