--- a/web1/src/app/po/quotation-list/quotation-list.component.html
+++ b/web1/src/app/po/quotation-list/quotation-list.component.html
@@ -15,7 +15,7 @@
                                         </button>
                                     </h2>
                                 </div>
-                                <div class="col-md-1 col-3 ps-md-0 ps-3 order-1 order-md-1">
+                                <div class="col-md-1 col-4 ps-md-0 ps-3 order-1 order-md-1">
                                     <select class=" form-control"
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -27,10 +27,17 @@
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
                                 </div>
-                                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages (pageChange)="getList()"
                                         [pageSize]="itemsPerPage" [(page)]="currentPage" [maxSize]="5" [rotate]="true"
+                                        [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                </div>
+                                <div class=" col-6 d-block d-md-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages (pageChange)="getList()"
+                                        [pageSize]="itemsPerPage" [(page)]="currentPage" [maxSize]="2" [rotate]="true"
                                         [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
