--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -6,31 +6,31 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-2 col-8 p-0 ms-3">
+                                <div class="col-lg-2 col-md-3 col-8 p-0 ms-3">
                                     <h2>Cash Collection</h2>
                                 </div>
                             </div>
                         </div>
                         <div class="body">
                             <div class="row">
-                                <div class="col-10">
+                                <div class="col-lg-10  col-md-9 col-12">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCashReport()">
                                         <div class="row">
-                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
                                                         #FromDatecontrol [disabled]="!editCashCollectionReport" />
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate"
                                                         [disabled]="!editCashCollectionReport" />
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                            <div class="col-xl-2 col-lg-4 col-md-3 col-12 mb-0">
                                                 <mat-form-field class="example-full-width mb-0"
                                                     *ngIf="user.UserGroup === 'CompanyAdmin'">
                                                     <mat-label>ShopName</mat-label>
@@ -74,7 +74,7 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                            <div class="col-xl-2 col-lg-4 col-md-4 col-12 mb-0 ">
                                                 <button class="me-2" type="submit" mat-raised-button color="primary">
                                                     Search
                                                 </button>
@@ -85,7 +85,7 @@
                                         </div>
                                     </form>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-lg-2 col-md-3 col-12  p-4  p-lg-2  ">
                                          <table class="totaclsEC" style="width: 95%;">
                                             <tr>
                                                <th style="font-size: 15px;">Total Collection</th> 
