--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -18,7 +18,7 @@
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCreditReport()">
                                         <div class="row">
-                                            <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0 paddingInp">
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
@@ -26,14 +26,14 @@
                                                         [disabled]="!editSupplierCreditReport" />
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0 paddingInp ">
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate"
                                                         [disabled]="!editSupplierCreditReport" />
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                            <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0">
                                                 <mat-form-field class="example-full-width mb-0"
                                                     *ngIf="user.UserGroup === 'CompanyAdmin'">
                                                     <mat-label>Shop Name</mat-label>
@@ -90,7 +90,7 @@
                                                     </mat-autocomplete>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0">
                                                 <mat-form-field class="example-full-width mb-0 paddingInp">
                                                     <mat-label>Status</mat-label>
                                                     <mat-select name="ProductStatus" [(ngModel)]="data.VendorStatus">
@@ -106,7 +106,7 @@
                                                 </mat-form-field>
                                             </div>
                                             <!--  spec end -->
-                                            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0 ">
+                                            <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0 ">
                                                 <button class="me-3" type="submit" mat-raised-button color="primary">
                                                     Search
                                                 </button>
@@ -119,7 +119,7 @@
                                     </form>
                                     <!-- TransfermasterList list -->
                                     <div class="body p-2">
-                                        <div id="print-content" class="col-sm-12"
+                                        <div id="print-content" class="col-12"
                                             style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
                                                 style="border: 2px solid #fff !important;" id="SupplierCreditExcel">
