--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -7,14 +7,14 @@
             <div class="header p-2 py-0 pt-1">
               <!-- Bill all Customer Wise-->
               <div *ngIf="this.id === '0'" class="row">
-                <div class="col-md-1 col-4 p-0 ms-3" style="width: 90px;">
-                  <h2>BillSerach</h2>
+                <div class="col-lg-1 col-md-2 col-10 " >
+                  <h2>Bill Serach</h2>
                 </div>
                 <!-- <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                                     (click)="exportAsXLSX()"></i>
                                 </div> -->
-                <div class="col-md-2 col-2 ps-md-0 ps-1 order-3 order-md-1">
+                <div class="col-md-2 col-4 mt-2 mt-md-0 ps-md-0 ps-1 order-3 order-md-1">
                   <select class=" form-control"
                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -26,19 +26,25 @@
                     <option [ngValue]="500">Show 500 Row</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-9 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                   <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                     [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                     (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                   </ngb-pagination>
                 </div>
-                <div class="col-md-1 col-6 order-0 order-md-1 ms-auto">
+                <div class=" col-8 d-md-none mt-2 d-block mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="col-md-1 col-6 order-1 order-md-1 ms-auto">
                   <div class="input-group">
                     <input placeholder="Reg No." [(ngModel)]="term1" #RegNo mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
-                <div class="col-md-2 col-6  order-0 order-md-1">
+                <div class="col-md-2 col-6  order-1 order-md-1">
                   <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
@@ -46,7 +52,7 @@
                 </div>
 
                 <div *ngIf="addBillingSearch" [routerLink]="['/sale/billing',0,0]"
-                  class="col-md-1 col-1  order-1 order-md-1" style="width: 40px; padding: 0; cursor: pointer;">
+                  class="col-md-1 col-2  order-0 order-md-1" style="width: 40px; padding: 0; cursor: pointer;">
                   <mat-icon class="col-white plus_icon me-1">
                     add</mat-icon>
                 </div>
@@ -92,7 +98,7 @@
 
             <!-- customer list start -->
             <div class="body mt-5 mt-md-2 p-2">
-              <div class="row">
+              <div class="row mt-5 mt-md-0">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div *ngIf="this.dataList.length == 0" class="datanotFound d-none d-lg-block">Data Not Found</div>
                   <div>
