--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -6,12 +6,12 @@
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
               <div class="row">
-                <div class="col-xl-1 col-lg-2 col-md-2 col-4 p-0 ms-3">
+                <div class="col-xl-1 col-lg-2 col-md-2 col-9 p-0 ps-3">
                   <h2>Customer <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                       (click)="exportAsXLSX()"></i></h2>
                 </div>
 
-                <div class="col-md-2 col-2 ps-md-0 ps-1 order-3 order-md-1">
+                <div class="col-md-2 col-4 mt-2 mt-md-0 ps-md-0 ps-1 order-3 order-md-1">
                   <select class=" form-control"
                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -23,25 +23,31 @@
                     <option [ngValue]="500">Show 500 Row</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-9 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                   <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                     [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                     (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                   </ngb-pagination>
                 </div>
-                <div class="col-md-1 col-6 order-0 order-md-1 ms-auto">
+                <div class="d-md-none mt-2 d-block col-8 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="col-md-1 col-6 order-1 order-md-1 ms-auto">
                   <div class="input-group">
                     <input placeholder="Cus ID"  [(ngModel)]="term1" #CusID mdbInput type="search" id="form"
                       class="form-control" />
                   </div>
                 </div>
-                <div class="col-md-2 col-5 order-0 order-md-1">
+                <div class="col-md-2 col-6 order-1 order-md-1">
                   <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
-                <div class="col-md-1 col-1  order-1 order-md-1" style="width: 70px; padding: 0;">
+                <div class="col-md-1 col-2  order-0 order-md-1" style="width: 70px; padding: 0;">
                   <mat-icon *ngIf="addCustomerSearch" class="col-white plus_icon me-1"
                     [routerLink]="['/sale/billing',0,0]"> add</mat-icon>
                   <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
@@ -50,13 +56,13 @@
               </div>
             </div>
             <!-- Grid View start -->
-            <div class="row mt-5 mt-md-2 p-2" *ngIf="dataList?.length !== 0 && !gridview"
+            <div class="row mt-5 pt-5 mt-md-2 p-2" *ngIf="dataList?.length !== 0 && !gridview"
               style="overflow:auto;height:530px; ">
-              <div class="col-xl-3 col-lg-4 col-md-6" *ngFor="let data of dataList let i = index;">
+              <div class="col-xl-3 col-lg-4 col-4" *ngFor="let data of dataList let i = index;">
                 <div class="course-card" style="height: 28rem;">
                   <div class="course-card-body">
                     <div class="course-card-top-overflow text-white">
-                      <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
+                      <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg " />
                     </div>
                     <h2 class="text-center m-0">{{data.Name}}</h2>
                     <p class="text-center m-0">{{data.MobileNo1}}</p>
@@ -75,7 +81,7 @@
             <!-- Grid View end -->
             <!-- customer list start -->
             <div class="body mt-5 mt-md-2 p-2">
-              <div class="row" *ngIf="gridview">
+              <div class="row mt-5 mt-md-0" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div class="table-responsive">
                     <table class="table table-striped table-hover table-sm table-bordered"
