--- a/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
+++ b/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
@@ -6,11 +6,11 @@
             <div class="card p-0">
               <div class="header p-2 py-0 pt-1">
                 <div class="row">
-                  <div class=" col-lg-2 col-md-4 col-8 p-0 ms-3">
-                    <h2>Customer Return List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                  <div class=" col-lg-2 col-md-4 col-9 p-0 ps-3">
+                    <h2>CustomerReturn List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                        (click)="exportAsXLSX()" ></i></h2>
                   </div>
-                  <div class="col-md-2 col-1 ps-md-0 ps-1">
+                  <div class="col-md-2 col-3 ps-md-0 ps-1">
                     <select class=" form-control"
                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                       [(ngModel)]="itemsPerPage" >
@@ -22,10 +22,16 @@
                       <option [ngValue]="500">Show 500 Row</option>
                     </select>
                   </div>
-                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                  <div class="col-md-3 d-md-block d-none mx-md-auto" style="margin-top:0px;">
                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                       [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                      [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                    </ngb-pagination>
+                  </div>
+                  <div class="d-md-none d-block col-6 mx-md-auto" style="margin-top:0px;">
+                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                      (pageChange)="getList()" [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                     </ngb-pagination>
                   </div>
                   <div class="col-md-2 col-4 ms-auto">
