--- a/web1/src/app/sale/doctor-list/doctor-list.component.html
+++ b/web1/src/app/sale/doctor-list/doctor-list.component.html
@@ -6,7 +6,7 @@
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
               <div class="row">
-                <div class="col-xl-1 col-lg-2 col-md-2 col-6 p-0 ms-md-3 ms-2">
+                <div class="col-xl-1 col-lg-2 col-md-2 col-5 p-0 ms-md-3 ms-2">
                   <h2>DoctorList<i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                     (click)="exportAsXLSX()"></i></h2>
                 </div>
@@ -22,13 +22,19 @@
                     <option [ngValue]="500">Show 500 Row</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                   <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                     [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                     (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                   </ngb-pagination>
                 </div>
-                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
+                <div class="d-md-none d-block col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="col-md-2 col-6 ms-auto order-0 order-md-1">
                   <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
@@ -64,7 +70,7 @@
             <!-- Grid View end -->
             <!-- doctor list start -->
             <div class="body mt-5 mt-md-2  p-2">
-              <div class="row" *ngIf="gridview">
+              <div class="row mt-3 mt-md-0" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div class="table-responsive">
                     <table class="table table-striped table-hover table-sm table-bordered"
