--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -670,6 +670,14 @@ thead :not([scope=row]):first-child {
     html{
         font-size: 65% ;
   }
+
+ }
+  @media only screen and (max-width:512px) and (min-width: 320px)  {
+    .page-item:not(:first-child) .page-link {
+        margin-left: -1px ;
+        padding: 4px 8px !important;
+    }
+ 
  }
 
 
